--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    kotlinOptions {
+        allWarningsAsErrors = false
+        freeCompilerArgs += [
+                '-opt-in=androidx.compose.material3.ExperimentalMaterial3Api'
+        ]
+    }
 }
 
 dependencies {
@@ -74,5 +80,8 @@ dependencies {
 
     // compose-navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
+
+
+    implementation 'com.airbnb.android:lottie-compose:4.0.0'
 
 }
