--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,6 @@ dependencies {
 
 
     implementation 'com.airbnb.android:lottie-compose:6.0.0'
+    implementation('com.google.accompanist:accompanist-flowlayout:0.19.0')
 
 }
