--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,14 @@ dependencies {
     // compose-navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
 
-
+    // Lottie Compose
     implementation 'com.airbnb.android:lottie-compose:6.0.0'
+
     implementation('com.google.accompanist:accompanist-flowlayout:0.19.0')
+
+    implementation "cash.z.ecc.android:kotlin-bip39:1.0.4"
+
+
+
 
 }
