--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -53,6 +54,10 @@ android {
     }
 }
 
+ext {
+    multidex_version = "2.0.1"
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -88,7 +93,8 @@ dependencies {
 
     implementation "cash.z.ecc.android:kotlin-bip39:1.0.4"
 
-
+    // Multidex
+    implementation "androidx.multidex:multidex:$multidex_version"
 
 
 }
