--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-    // hilt
-    implementation "com.google.dagger:hilt-android:2.43.2"
-    kapt "com.google.dagger:hilt-compiler:2.43.2"
+
 
     // compose-paging
     implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
@@ -102,6 +100,17 @@ dependencies {
 
     // Multidex
     implementation "androidx.multidex:multidex:$multidex_version"
+
+    // Dependency Injection hilt
+//    implementation "com.google.dagger:hilt-android:2.43.2"
+//    kapt "com.google.dagger:hilt-compiler:2.43.2"
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("androidx.hilt:hilt-work:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    implementation("androidx.work:work-runtime-ktx:2.8.0")
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+
 
 
 }
