--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,16 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
+//    id 'com.google.devtools.ksp'
+//    id("com.google.devtools.ksp") version "1.8.0-1.0.8"
 }
+
+kapt {
+    correctErrorTypes true
+}
+
+
 
 android {
     namespace 'com.ton_blockchain.ton_wallet_challenge'
@@ -59,6 +68,25 @@ android {
                 '-opt-in=androidx.compose.material3.ExperimentalMaterial3Api'
         ]
     }
+
+
+
+//    kotlin {
+//        sourceSets.main {
+//            kotlin.srcDir("build/generated/ksp/main/kotlin")
+//        }
+//        sourceSets.test {
+//            kotlin.srcDir("build/generated/ksp/test/kotlin")
+//        }
+//    }
+
+//    applicationVariants.all { variant ->
+//        kotlin.sourceSets {
+//            getByName(variant.name) {
+//                kotlin.srcDir("build/generated/ksp/${variant.name}/kotlin")
+//            }
+//        }
+//    }
 }
 
 ext {
@@ -84,7 +112,6 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
 
-
     // compose-paging
     implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
 
@@ -102,15 +129,18 @@ dependencies {
     implementation "androidx.multidex:multidex:$multidex_version"
 
     // Dependency Injection hilt
-//    implementation "com.google.dagger:hilt-android:2.43.2"
-//    kapt "com.google.dagger:hilt-compiler:2.43.2"
-    implementation("com.google.dagger:hilt-android:2.44")
-    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("com.google.dagger:hilt-android:2.45")
+    kapt("com.google.dagger:hilt-android-compiler:2.45")
     implementation("androidx.hilt:hilt-work:1.0.0")
     kapt("androidx.hilt:hilt-compiler:1.0.0")
-    implementation("androidx.work:work-runtime-ktx:2.8.0")
+    implementation("androidx.work:work-runtime-ktx:2.8.1")
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
+
+    // Logger
+    implementation 'com.orhanobut:logger:2.2.0'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 
 }
