--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,4 +144,7 @@ dependencies {
 
     implementation "com.orhanobut:hawk:2.0.1"
 
+    // Zxing
+    implementation 'com.google.zxing:core:3.3.0'
+
 }
