--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ android {
 
 ext {
     multidex_version = "2.0.1"
+    camerax_version = "1.3.0-alpha06"
 }
 
 dependencies {
@@ -146,5 +147,10 @@ dependencies {
 
     // Zxing
     implementation 'com.google.zxing:core:3.3.0'
+
+    // CameraX
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
 
 }
