--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,12 +146,12 @@ dependencies {
     implementation "com.orhanobut:hawk:2.0.1"
 
     // Zxing
-    implementation 'com.google.zxing:core:3.3.0'
-    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.google.zxing:core:3.3.3'
+//    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
     // CameraX
-    implementation "androidx.camera:camera-camera2:${camerax_version}"
-    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    implementation "androidx.camera:camera-view:${camerax_version}"
+//    implementation "androidx.camera:camera-camera2:${camerax_version}"
+//    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+//    implementation "androidx.camera:camera-view:${camerax_version}"
 
 }
