--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,15 +139,23 @@ dependencies {
     // Logger
     implementation 'com.orhanobut:logger:2.2.0'
 
+    // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation('org.bitcoinj:bitcoinj-core:0.16.2')
 
+    // Hawk
     implementation "com.orhanobut:hawk:2.0.1"
 
     // Zxing
     implementation 'com.google.zxing:core:3.3.3'
-//    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+    // Pin Lock
+    implementation 'com.github.raheemadamboev:pin-lock-compose:1.0.1'
+
+//    implementation 'com.github.horizontalsystems:bitcoin-kit-android:master-SNAPSHOT'
+
+//    implementation 'com.github.walleth:kethereum:0.84.2'
 
     // CameraX
 //    implementation "androidx.camera:camera-camera2:${camerax_version}"
