--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
         }
     }
     kotlinOptions {
+        freeCompilerArgs += ["-Xjvm-default=all"]
         allWarningsAsErrors = false
         freeCompilerArgs += [
                 '-opt-in=androidx.compose.material3.ExperimentalMaterial3Api'
@@ -89,7 +90,7 @@ android {
 
 ext {
     multidex_version = "2.0.1"
-    camerax_version = "1.3.0-alpha06"
+    camerax_version = "1.2.2"
 }
 
 dependencies {
@@ -148,7 +149,8 @@ dependencies {
     implementation "com.orhanobut:hawk:2.0.1"
 
     // Zxing
-    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     // Pin Lock
     implementation 'com.github.raheemadamboev:pin-lock-compose:1.0.1'
@@ -158,8 +160,10 @@ dependencies {
 //    implementation 'com.github.walleth:kethereum:0.84.2'
 
     // CameraX
-//    implementation "androidx.camera:camera-camera2:${camerax_version}"
-//    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-//    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
+    implementation "com.google.accompanist:accompanist-navigation-material:0.31.1-alpha"
+
 
 }
