--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ ext {
     composed_barcodes_version = "1.1.1"
     barcode_scanning_version = "17.1.0"
     ton_version = "0.2.15"
+    room_version = "2.4.3"
 }
 
 dependencies {
@@ -128,6 +129,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.2"
     implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.0-beta01")
 
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
 
     // Lottie Compose
     implementation "com.airbnb.android:lottie-compose:$lottie_compose_version"
@@ -189,5 +191,11 @@ dependencies {
     // Ton
     implementation "org.ton:ton-kotlin:$ton_version"
 
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
 }
