--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -121,6 +122,12 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -147,6 +154,7 @@ dependencies {
     // View
     implementation('com.google.accompanist:accompanist-flowlayout:0.19.0')
     implementation 'com.github.raheemadamboev:pin-lock-compose:1.0.1'
+    implementation "io.github.dokar3:sheets:0.4.2"
 
     // Multidex
     implementation "androidx.multidex:multidex:$multidex_version"
@@ -215,5 +223,6 @@ dependencies {
 
 
     // Biometric
-    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha05"
+//    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha05"
+//    implementation("androidx.biometric:biometric:1.1.0")
 }
