--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,6 +223,5 @@ dependencies {
 
 
     // Biometric
-//    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha05"
-//    implementation("androidx.biometric:biometric:1.1.0")
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha05"
 }
